# routes/index.js
@@ -2,11 +2,11 @@ const router = require('express').Router();
 
 router.use('/', require('./swagger'));
 
-router.get('/', (req, res) => {res.send('Hello World')});
+router.get('/', (req, res) => {res.send('Welcome to my personal API project')});
 
-router.use('/contacts', require('./contacts'));
+router.use('/vehicles', require('./vehicles'));
 
-router.use('/temples', require('./temples'));
+router.use('/drivers', require('./drivers'));
 
 router.use('/api-docs', require('./swagger'));
 
